--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,14 @@
             android:name=".activity.NoteActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
+
+        <service
+            android:name=".service.MainService"
+            android:exported="false" />
+
+        <service
+            android:name=".service.DatabaseService"
+            android:exported="false" />
     </application>
 
 </manifest>
