--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,12 +65,13 @@
         </receiver>
 
         <receiver android:name=".receiver.ShutdownReceiver">
-
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_SHUTDOWN" />
                 <action android:name="android.intent.action.QUICKBOOT_POWEROFF" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".receiver.NetworkReceiver" />
 
     </application>
 
